--- a/index.html
+++ b/index.html
@@ -46,14 +46,30 @@
         <!-- <section class="flex" data-progress-bar-show="1">
           <h1 style="align-self: flex-start;">Die RTL</h1>
           <div style="align-self: center;">
-            <include src="./img/company.svg" />
+            <include src="./img/company.svg"></include>
+          </div>
+        </section> -->
+
+        <!-- <section class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
+          <div style="align-self: stretch; height: 50vh;">
+            <include src="./img/notepad.svg"></include>
+          </div>
+        </section> -->
+
+        <!-- <section class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
+          <div style="align-self: stretch; height:50vh;">
+            <include src="./mastercss/new_architecture.css"></include>
+            <include src="./img/new_architecture.svg"></include>
           </div>
         </section> -->
 
         <section class="flex" data-progress-bar-show="1">
           <h1 style="align-self: flex-start;">Der Merkzettel</h1>
           <div style="align-self: stretch; height: 50vh;">
-            <include src="./img/notepad.svg" />
+            <include src="./mastercss/components_combined.css"></include>
+            <include src="./img/components_combined.svg"></include>
           </div>
         </section>
       </div>
@@ -67,7 +83,9 @@
         let src = e.getAttribute('src')
         fetch(src)
           .then(r => r.text())
-          .then(html => (e.outerHTML = html))
+          .then(html => {
+            e.outerHTML = /.css$/.test(src) ? `<style>${html}</style>` : html
+          })
       }
 
       // Insert spans for lowercase substrings into h tags
