--- a/index.html
+++ b/index.html
@@ -43,31 +43,31 @@
           <h4 class="progress-bar-no-entry">ehem. Wishlist-Service</h4>
         </section> -->
 
-        <!-- <section class="flex" data-progress-bar-show="1">
+        <section class="flex" data-progress-bar-show="1">
           <h1 style="align-self: flex-start;">Die RTL</h1>
-          <div style="align-self: center;">
+          <div style="align-self: stretch;  height:59vh;">
             <include src="./img/company.svg"></include>
           </div>
-        </section> -->
-
-        <!-- <section class="flex" data-progress-bar-show="1">
-          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
-          <div style="align-self: stretch; height: 50vh;">
-            <include src="./img/notepad.svg"></include>
-          </div>
-        </section> -->
-
-        <!-- <section class="flex" data-progress-bar-show="1">
-          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
-          <div style="align-self: stretch; height:50vh;">
-            <include src="./mastercss/new_architecture.css"></include>
-            <include src="./img/new_architecture.svg"></include>
-          </div>
-        </section> -->
+        </section>
 
         <section class="flex" data-progress-bar-show="1">
           <h1 style="align-self: flex-start;">Der Merkzettel</h1>
-          <div style="align-self: stretch; height: 50vh;">
+          <div style="align-self: stretch; height: 55vh;">
+            <include src="./img/notepad.svg"></include>
+          </div>
+        </section>
+
+        <section class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
+          <div style="align-self: stretch; height:60vh;">
+            <include src="./mastercss/new_architecture.css"></include>
+            <include src="./img/new_architecture.svg"></include>
+          </div>
+        </section>
+
+        <section class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Der Merkzettel</h1>
+          <div style="align-self: stretch; height: 60vh;">
             <include src="./mastercss/components_combined.css"></include>
             <include src="./img/components_combined.svg"></include>
           </div>
