--- a/img/swagger_snippet.html
+++ b/img/swagger_snippet.html
@@ -126,14 +126,6 @@
 }/*#DIV_249*/
 
 div#DIV_249:before {
-  content:'';
-  position: absolute;
-  left: 0;
-  top: 66vh;
-  height: 5vh;
-  width: 100%;
-  z-index: 100;
-  background: linear-gradient(0deg, white, transparent);
 }
 
 #DIV_1 {
@@ -539,7 +531,6 @@ div#DIV_249:before {
     color: rgb(59, 65, 81);
     display: flex;
     height: 50px;
-    min-height: 50px;
     text-decoration: none solid rgb(59, 65, 81);
     width: 857px;
     column-rule-color: rgb(59, 65, 81);
@@ -5051,21 +5042,44 @@ div#DIV_249:before {
     outline: rgb(59, 65, 81) none 0px;
 }/*#DIV_214:before*/
 
+#DIV_1 {
+    padding-top: 39px;
+}
 
+#DIV_2 {
+    position: fixed;
+    margin-top: -39px;
+    z-index: 1000;
+    background: #edfaf4;
+}
 
 </style>
-<div id="DIV_240">
-	<section id="SECTION_241">
+<div id="DIV_240" class="fragment smooth-fade-in" data-fragment-index="2">
+	<div id="SECTION_241">
 		<div id="DIV_242">
 			<div id="DIV_243">
 				<div id="DIV_244">
-					<section id="SECTION_245">
+					<div id="SECTION_245">
 						<div id="DIV_246">
 							<span id="SPAN_247"></span>
 							<div id="DIV_248">
 								<div id="DIV_249">
 									<span id="SPAN_250"></span>
 									<div id="DIV_1">
+                                        <div style="
+                                            height: 0;
+                                            width: 0;
+                                        ">
+                                            <div style="
+                                                height: 100px;
+                                                width: 859px;
+                                                position: absolute;
+                                                background: linear-gradient(0deg, white, transparent);
+                                                bottom: 0;
+                                            ">
+
+                                            </div>
+                                        </div>
 										<div id="DIV_2">
 											<span id="SPAN_3">POST</span><span id="SPAN_4"><a href="http://petstore.swagger.io/?url=https://gist.githubusercontent.com/sv-redteclab/c2958b4103681e4bc8b5097ab655ac1e/raw/a33605cc6cd1378e25095f789d678f5ee4c62b4b/Schnittstellenbeschreibung.yml#/notepads/post__tenant___customer_id__notepads" id="A_5"><span id="SPAN_6">​/{tenant}​/{customer_id}​/notepads</span></a></span>
 											<div id="DIV_7">
@@ -5081,7 +5095,7 @@ div#DIV_249:before {
 
 											<div id="DIV_9">
 												<div id="DIV_10">
-													<div id="DIV_11" class="parameters fragment" >
+													<div id="DIV_11">
 														<div id="DIV_12">
 															<div id="DIV_13">
 																<h4 id="H4_14">
@@ -5095,7 +5109,7 @@ div#DIV_249:before {
 															</button>
 														</div>
 													</div>
-													<div id="DIV_18">
+													<div id="DIV_18" >
 														<div id="DIV_19">
 															<table id="TABLE_20">
 																<thead id="THEAD_21">
@@ -5193,7 +5207,7 @@ path
 															</table>
 														</div>
 													</div>
-													<div id="DIV_48">
+													<div id="DIV_48" class="fragment always-visible" data-fragment-index="3">
 														<div id="DIV_49">
 															<h4 id="H4_50">
 																Request body
@@ -5235,7 +5249,7 @@ path
 												<div id="DIV_74">
 													</div>
 												<div id="DIV_75">
-														<div id="DIV_76">
+														<div id="DIV_76" class="fragment always-visible" data-fragment-index="4">
 															<h4 id="H4_77">
 																Responses
 															</h4>
@@ -5268,7 +5282,7 @@ path
 																					</p>
 																				</div>
 																			</div>
-																			<section id="SECTION_92">
+																			<div id="SECTION_92">
 																				<div id="DIV_93">
 																					<small id="SMALL_94">Media type</small>
 																					<div id="DIV_95">
@@ -5289,7 +5303,7 @@ Controls
 																					<!-- /react-text -->
 
 																				</div>
-																			</section>
+																			</div>
 																			<div id="DIV_100">
 																					<ul id="UL_101">
 																						<li id="LI_102">
@@ -5320,7 +5334,7 @@ Controls
 																					<i id="I_149">No links</i>
 																				</td>
 																	</tr>
-																	<tr id="TR_150">
+																	<tr id="TR_150" class="fragment always-visible" data-fragment-index="5">
 																				<td id="TD_151">
 																					500
 																				</td>
@@ -5332,7 +5346,7 @@ Controls
 																							</p>
 																						</div>
 																					</div>
-																					<section id="SECTION_156">
+																					<div id="SECTION_156">
 																						<div id="DIV_157">
 																							<small id="SMALL_158">Media type</small>
 																							<div id="DIV_159">
@@ -5343,7 +5357,7 @@ Controls
 																								</select>
 																							</div>
 																						</div>
-																					</section>
+																					</div>
 																					<div id="DIV_162">
 																						<ul id="UL_163">
 																							<li id="LI_164">
@@ -5384,7 +5398,7 @@ Controls
 																								</p>
 																							</div>
 																						</div>
-																						<section id="SECTION_201">
+																						<div id="SECTION_201">
 																							<div id="DIV_202">
 																								<small id="SMALL_203">Media type</small>
 																								<div id="DIV_204">
@@ -5395,7 +5409,7 @@ Controls
 																									</select>
 																								</div>
 																							</div>
-																						</section>
+																						</div>
 																						<div id="DIV_207">
 																							<ul id="UL_208">
 																								<li id="LI_209">
@@ -5438,9 +5452,9 @@ Controls
 								</div>
 							</div>
 						</div>
-					</section>
+					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 </div>
