--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -28,9 +27,9 @@
         { id: '1', title: 'Einleitung' },
         { id: '2', title: 'System' },
         { id: '3', title: 'Projekt' },
-        { id: '4', title: 'Schnittstelle' },
-        { id: '5', title: 'Komponenten' },
-        { id: '6', title: 'Testing' },
+        { id: '4', title: 'Entwurf' },
+        // { id: '5', title: 'Komponenten' },
+        { id: '6', title: 'Bereitstellung' },
         { id: '7', title: 'Resume' }
       ]
     </script>
@@ -234,7 +233,37 @@
           </div>
         </section>
 
-        <section class="flex" data-progress-bar-show="1">
+        <section id="s12" class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Komponenten</h1>
+          <ul style="margin-bottom: 0.5em;">
+            <li>
+              Koa Middleware als Eventhandle<br />
+              <span>&rArr; Reichern HTTP context an</span> <br />
+              <span>&rArr; Entscheiden über weitergabe</span>
+            </li>
+            <li>Trennung von DB-Zugriff un -Verbindung</li>
+          </ul>
+          <div
+            style="
+            align-self: stretch;
+            overflow: hidden;
+            height: inherit;
+          "
+          >
+            <include src="./mastercss/service_komponenten.css"></include>
+            <include src="./img/service_komponenten.svg"></include>
+          </div>
+        </section>
+
+        <section id="s13" class="flex" data-progress-bar-show="1">
+          <h1 style="align-self: flex-start;">Kontrollfluss</h1>
+          <div style="align-self: stretch; height: 59vh;">
+            <include src="./mastercss/service_request.css"></include>
+            <include src="./img/service_request.svg"></include>
+          </div>
+        </section>
+
+        <section id="s14" class="flex" data-progress-bar-show="1">
           <h1 style="align-self: flex-start;">Planung</h1>
           <div style="align-self: stretch; height: 59vh;">
             <include src="./mastercss/deployment_h.css"></include>
@@ -244,11 +273,11 @@
 
         <script>
           document
-            .querySelectorAll('.slides section:not(:nth-last-child(2))')
+            .querySelectorAll('.slides section:not(:nth-last-child(3))')
             .forEach(e => (e.outerHTML = ''))
           window.setTimeout(_ => {
             for (let i = 0; i < 20; i++) {
-              Reveal.nextFragment()
+              // Reveal.nextFragment();
             }
           }, 1000)
         </script>
